<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Campus</string>
    <string name="search">Search</string>
    <string name="tum_logo">TUM Logo</string>
    <string name="update">Update</string>
    <string name="loading">Loading …</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="app_short_description" translatable="false">TUM information platform - from students for students</string>
    <string name="ends_after">Ends after</string>
    <string name="ends_on">Ends on</string>
    <string name="repeats">Repeats Weekly</string>
    <string name="create_event_too_many_error">Event series can not be longer than 6 months.</string>
    <string name="create_event_too_little_error">Event series needs to have at least two events.</string>
    <string name="create_event_some_failed">%1$s out of %2$s events could not be created.</string>
    <string name="delete_series">delete series</string>
    <string name="dialog_show_calendar">Export successful.\nShow local calendar <i>TUM_CAMPUS_APP</i> on <i>Google Calendar App</i>?</string>
    <string name="export_to_google">Export to Google</string>
    <string name="export_to_google_error">An error occurred while exporting your calendar to Google Calendar.</string>
    <string name="calendarTimeZone" translatable="false">Germany/Munich</string>
    <string name="delete_from_google">Delete from Google</string>
    <string name="dialog_delete_calendar">Do you want to delete  the <i>TUM_CAMPUS_APP</i>  calendar from your device?</string>
    <string name="calendar_deleted_toast">Calender deleted successfully</string>
    <string name="calendar_not_existing_toast">No local calendar existing</string>
    <string name="semester_summer">Summer term</string>
    <string name="semester_winter">Winter term</string>
    <string name="calendar_filter_title">Change Filters</string>
    <string name="calendar_filter_canceled">Show Canceled Events</string>
    <string name="calendar_filter_hour_limit">Limit Shown Timespan</string>
    <string name="calendar_filter_hour_limit_min_title">From Hour</string>
    <string name="calendar_filter_hour_limit_max_title">To Hour</string>
    <string name="calendar_filter_hour_limit_error_message">Minimum hour must be below maximum hour!</string>
    <string name="change_color">Change color</string>
    <string name="choose_color">Choose color</string>
    <string name="custom_color_default">Default color</string>
    <string name="custom_color_red">Red</string>
    <string name="custom_color_pink">Pink</string>
    <string name="custom_color_purple">Purple</string>
    <string name="custom_color_indigo">Indigo</string>
    <string name="custom_color_blue">Blue</string>
    <string name="custom_color_teal">Teal</string>
    <string name="custom_color_green">Green</string>
    <string name="custom_color_lime">Lime</string>
    <string name="custom_color_yellow">Yellow</string>
    <string name="custom_color_amber">Amber</string>
    <string name="custom_color_orange">Orange</string>
    <string name="apply_to_all_occurrences">Apply to all occurrences</string>
    <string name="month_view_monday">MO</string>
    <string name="month_view_tuesday">TU</string>
    <string name="month_view_wednesday">WE</string>
    <string name="month_view_thursday">TH</string>
    <string name="month_view_friday">FR</string>
    <string name="month_view_saturday">SA</string>
    <string name="month_view_sunday">SU</string>
    <string name="month_view_back_button_description">Go to previous month</string>
    <string name="month_view_forward_button_description">Go to next month</string>
    <string name="no_map_available">No map available</string>
    <string name="search_rooms">Search rooms</string>
    <string name="error_accessing_tumonline_header">Error accessing TUMonline</string>
    <string name="error_accessing_tumonline_body">Please make sure your TUMonline access token has been activated and the corresponding rights are set.</string>
    <string name="error_no_access_token_setup_header">No TUMonline access token was set</string>
    <string name="error_no_access_token_setup_body">Please set your TUMonline access token in the <i>Settings</i> to access TUMonline features.</string>
    <string name="error_something_wrong">Sorry, something went wrong.</string>
    <string name="click_to_try_again"><b>Click here to retry.</b></string>
    <string name="error_access_token_already_set_generate_new">Your TUMonline access token is already set. If you generate a new token, the old one becomes useless.</string>
    <string name="error_invalid_tum_id">Your TUM ID is invalid</string>
    <string name="error_invalid_access_token">Your TUMonline access token is invalid.</string>
    <string name="error_access_token_could_not_be_generated">Your TUMonline access token could not be generated.</string>
    <string name="error_access_token_inactive">Your TUMonline access token is not enabled. Head to TUMonline to enable it.</string>
    <string name="error_no_internet_connection">No Internet connection</string>
    <string name="error_no_data_to_show">No data to show.</string>
    <string name="error_no_rights_to_access_function">Your TUMonline access token doesn’t have the rights to access this function.</string>
    <string name="error_request_limit_reached">You reached the request limit for TUMonline. Try again later.</string>
    <string name="error_access_token_limit_reached">Token limit reached. You have delete an access token in TUMonline before you can continue.</string>
    <string name="error_access_token_insufficient_permissions">Your TUMonline access token is missing the specific rights!</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_tum_online_unavailable">TUMonline is currently unavailable.</string>
    <string name="empty_string" translatable="false" />
    <string name="average_grade">Average grade</string>
    <string name="average_grade_hint">Estimated average. Please refer to TUMOnline for the precise one.</string>
    <string name="edit_grades">Edit Grades</string>
    <string name="show_column_chart">Show Column Chart</string>
    <string name="show_pie_chart">Show Pie Chart</string>
    <string name="result_extra">Result:&#160;</string>
    <string name="semester">Semester</string>
    <string name="examiner">Examiner</string>
    <string name="mode">Mode</string>
    <string name="all_programs">All Grades</string>
    <string name="date">Date</string>
    <string name="credits" translatable="false">ECTS</string>
    <string name="no_grades">You don\'t have any grades yet.</string>
    <string name="reset_grade">Reset Grade</string>
    <string name="use_grade_in_average">Use Grade</string>
    <string name="grade_weight_label">Grade Weight:</string>
    <string name="course_name">Course name</string>
    <string name="thesis">Thesis</string>
    <string name="text_view_grade_label">Grade (0 for passed)</string>
    <string name="default_grade">1,0</string>
    <string name="text_view_examiner_name">Examiner Name</string>
    <string name="text_view_credits_label">Credits</string>
    <string name="default_credits">6</string>
    <string name="text_view_grade_weight">Grade weight</string>
    <string name="default_grade_weight">1.0</string>
    <string name="text_view_examination_date_label">Examination Date</string>
    <string name="grade_date_format">dd.mm.yy</string>
    <string name="grade_date_default">01.01.22</string>
    <string name="text_view_semester_label">Year of the start of the semester (e.g. 22WS or 21SuSe)</string>
    <string name="grade_semester_default">22WS</string>
    <string name="use_weights_in_diagrams">Consider credits and weights in the diagram</string>
    <string name="delete_exam">Delete Exam</string>
    <string name="delete_exam_dialog_message">Should this exam be irrevocably deleted?</string>
    <string name="add_grade_error_wrong_semester">Wrong semester format: Too short. Correct: two numbers for the year + W/S</string>
    <string name="add_grade_error_semester_no_ws">Wrong semester format: Term not specified. Correct two numbers for the year + W/S</string>
    <string name="add_grade_error_invalid_weight">Wrong weight format: Weights can not be negative.</string>
    <string name="add_grade_error_invalid_grade_format">Wrong grade format: Grade must be between 1.0 and 5.0 or equal to 0.</string>
    <string name="add_grade_missing_course_title">Insert a course title.</string>
    <string name="add_grade_error_invalid_weight_less_than_zero">Invalid amount of credits. Must be greater than 0.</string>
    <string name="add_exam_dialog_title">Add a New Exam</string>
    <string name="add_exam_dialog_message">Grades are normally added automatically. In case special grades should be added, this can be done here. Manually added Exams can be deleted later on.</string>
    <string name="grade_passed_annotation">Exam passed without a grade</string>
    <string name="grade_percentages">Percentage of each grade</string>
    <string name="lrz_id">TUM Identification</string>
    <string name="role">Role</string>
    <string name="tuition_fees">Tuition Fees</string>
    <string name="mvv">MVV</string>
    <string name="next_lecture">Next lecture</string>
    <string name="cafeteria">Cafeteria</string>
    <string name="chat" translatable="false">Chat</string>
    <string name="eduroam" translatable="false">Eduroam</string>
    <string name="setup">Setup</string>
    <string name="password">Password</string>
    <string name="pin_lock">PIN-Lock</string>
    <string name="pin_lock_desc">To set up the wireless access a PIN lock is required.\nIf you don’t already use PIN lock you can set it up here.</string>
    <string name="enable_pin_lock">Enable PIN-Lock</string>
    <string name="data_backup">Data-Backup</string>
    <string name="data_backup_desc">For safety reasons, the data backup must be disabled to avoid that the TUM credentials are stored unencrypted on the Google servers.\nUnder ‘Backup &amp; restore’ > ‘Back up my data’ to disable.</string>
    <string name="disable_data_backup">Disable Data-Backup</string>
    <string name="pin_lock_rem"><b>Configuration failed!</b>\nDo you have a manually created wifi profile? We cannot overwrite it so please delete it!</string>
    <string name="install_certificate">Install certificate</string>
    <string name="certificate">Certificate</string>
    <string name="certificate_desc">You have to install a CA-Root-certificate to enable secure connection with server. Just click ‘Install certificate’ and confirm with ‘OK’.</string>
    <string name="password_gets_not_saved">TUM Campus App does not save the password, but Android WifiManager does.</string>
    <string name="switch_map">Switch map</string>
    <string name="navigate">Directions to</string>
    <string name="view_mode">Change view mode</string>
    <string name="room_timetable">Room timetable</string>
    <string name="newspread" translatable="false" translateable="false">Newspread</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_configure_description">Configure the cards to show</string>
    <string name="cancel">Cancel</string>
    <string name="transition_card" translatable="false">card_transition</string>
    <string name="create_event">Create appointment</string>
    <string name="tum_calendar">TUM Calendar</string>
    <string name="external_calendar">External Calendar</string>
    <string name="add_to_calendar_info">Add event to calendar</string>
    <string name="event_export" translatable="false">Event Export</string>
    <string name="unknown">Unknown</string>
</resources>