<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:transitionName="@string/transition_card"
            tools:ignore="UnusedAttribute">

            <TextView
                style="@style/SmallListSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lrz_id" />

            <EditText
                android:id="@+id/wifi_lrz_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="16dp"
                android:hint="@string/lrz_id"
                android:inputType="text" />

            <EditText
                android:id="@+id/wifi_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/password_gets_not_saved" />

            <TextView
                android:id="@+id/pin_lock_rem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_lock_rem"
                android:textColor="#FF0000"
                android:visibility="gone" />

            <TextView
                android:id="@+id/pin_lock"
                style="@style/SmallListSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin_lock" />

            <TextView
                android:id="@+id/text_with_link_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pin_lock_desc" />

            <Button
                style="@style/FlatButton"
                android:onClick="openSecuritySettings"
                android:text="@string/enable_pin_lock" />

            <LinearLayout
                android:id="@+id/certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/SmallListSeparatorTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/certificate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/certificate_desc" />

                <Button
                    style="@style/FlatButton"
                    android:onClick="onInstallCertificate"
                    android:text="@string/install_certificate" />
            </LinearLayout>


            <TextView
                style="@style/SmallListSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_backup" />

            <TextView
                android:id="@+id/text_with_link_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/data_backup_desc" />

            <Button
                style="@style/FlatButton"
                android:onClick="showDataBackupSettings"
                android:text="@string/disable_data_backup" />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/buttonBar"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/buttonBar"
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickCancel"
            android:text="@android:string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            style="@style/ButtonBarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:onClick="onClickSetup"
            android:text="@string/setup" />
    </LinearLayout>
</RelativeLayout>